# everybody_codes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
2024/: README.md
2024/day01/: day01.py
2024/day02/: day02.py  p1.txt  p2.txt  p3.txt
2024/day03/: day03.py
2024/day04/: day04.py  p1.txt  p2.txt  p3.txt
2024/day05/: day05.py
2024/day06/: day06.py
2024/day07/: day07.py
2024/day08/: day08.py  p1.txt
2024/day09/: day09.py
2024/day10/: day10.py
2024/day11/: day11.py
other/: template.txt
src/: get_input.py  timing.py
src/python/2025/: README.md
src/python/2025/01/: day01.py
src/python/2025/02/: day02.py
src/python/2025/03/: day03.py
src/python/2025/04/: day04.py
src/python/2025/05/: day05.py
src/python/2025/06/: day06.py
src/python/2025/07/: day07.py
src/python/2025/08/: day08.py
src/python/2025/09/: day09.py
src/python/2025/10/: day10.py
src/python/2025/11/: day11.py
src/python/2025/12/: day12.py
src/python/common/: dsu.py
src/stories/echoes_of_enigmatus/: quest_01.py  quest_02.py
src/templates/: template.py
stories/echoes_of_enigmatus/: quest_01.py  quest_02.py
utils/: timing.py
