[project]
name = "everybody-codes"
version = "0.1.0"
description = "Solutions to the Everybody Codes problem sets."
authors = ["MilaDog <daniel.ryan.sergeant@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "regex>=2025.11.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]
