[project]
name = "everybody-codes"
version = "0.1.0"
description = "Solutions to the Everybody Codes problem sets."
authors = [{name = "MilaDog", email="daniel.ryan.sergeant@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "regex>=2025.11.3",
    "shapely>=2.1.2",
    "hatchling>=1.28.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
